<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media_library">Медиатека</string>

    <string name="theme_switch">Темная тема</string>

    <string name="share_app">Поделиться приложением</string>

    <string name="agreement_users">Пользовательское соглашение</string>

    <string name="support">Написать в поддержку</string>
</resources>