<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_main">

        <TextView
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_title"
            android:layout_marginTop="14dp"
            android:layout_marginRight="210dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size">

        </TextView>


        <Button
            android:id="@+id/search"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_left_others"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="@dimen/between_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/cornerRadius"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:iconSize="17dp"
            app:iconTint="@color/black" />

        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/mediaLibrary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_left_others"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="@dimen/between_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/cornerRadius"
            app:icon="@drawable/ic_medialibrary"
            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:iconSize="17dp"
            app:iconTint="@color/black" />

        <Button
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_left_others"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="@dimen/between_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/cornerRadius"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:iconSize="17dp"
            app:iconTint="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>